--- a/SkeletonBind/SkeletonBind.vcxproj
+++ b/SkeletonBind/SkeletonBind.vcxproj
@@ -143,11 +143,13 @@
     <ClCompile Include="SkeletonData.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DrawSkeleton.h" />
